--- a/trac/templates/attachment.html
+++ b/trac/templates/attachment.html
@@ -91,7 +91,7 @@
               </th>
             </tr>
             <tr>
-              <td class="message searchable">
+              <td class="message searchable" xml:space="preserve">
                 ${wiki_to_html(context.parent, attachment.description)}
               </td>
             </tr>
