--- a/trac/ticket/templates/query_results.html
+++ b/trac/ticket/templates/query_results.html
@@ -66,7 +66,9 @@
             </tr>
             <tr py:for="r in result_rows" class="fullrow">
               <th class="meta">$r</th>
-              <td colspan="${len(headers)-1}">${wiki_to_html(context('ticket', result.id), result[r])}</td>
+              <td colspan="${len(headers)-1}" xml:space="preserve">
+                ${wiki_to_html(context('ticket', result.id), result[r])}
+              </td>
             </tr>
           </py:with>
         </py:for>
