--- a/trac/ticket/templates/roadmap.html
+++ b/trac/ticket/templates/roadmap.html
@@ -57,7 +57,9 @@
             <py:if test="mstats.stats.count">${progress_bar(mstats.stats, mstats.interval_hrefs, stats_href=mstats.stats_href)}</py:if>
           </div>
 
-          <div class="description">${wiki_to_html(context('milestone', milestone.name), milestone.description)}</div>
+          <div class="description" xml:space="preserve">
+            ${wiki_to_html(context('milestone', milestone.name), milestone.description)}
+          </div>
 
         </li>
       </ul>
