--- a/trac/versioncontrol/templates/changeset.html
+++ b/trac/versioncontrol/templates/changeset.html
@@ -121,7 +121,7 @@
             </py:otherwise>
           </py:for>
           <dt class="property message">Message:</dt>
-          <dd class="message searchable" py:choose="">
+          <dd class="message searchable" py:choose="" xml:space="preserve">
             <py:when test="not len(changeset.message.strip())">
             &nbsp;
             </py:when>
