--- a/trac/templates/error.html
+++ b/trac/templates/error.html
@@ -49,7 +49,7 @@
     <input py:if="teo" type="hidden" name="version"
            value="${'dev' in trac.version and 'devel' or trac.version}" />
     <input type="hidden" name="summary" value="$message" />
-    <textarea id="description" rows="3" cols="10">
+    <textarea name="description" rows="3" cols="10">
 ==== How to Reproduce ====
 
 While doing a $req.method operation on `$req.path_info`, Trac issued an internal error.
