--- a/trac/admin/templates/admin_plugins.html
+++ b/trac/admin/templates/admin_plugins.html
@@ -21,7 +21,7 @@
         <legend>Install Plugin:</legend>
         <div class="field">
           <label>
-            File: <input type="file" name="egg_file" disabled="${readonly or None}" />
+            File: <input type="file" name="plugin_file" disabled="${readonly or None}" />
           </label>
         </div>
         <p class="help" py:choose="readonly">
