--- a/trac/prefs/templates/prefs_advanced.html
+++ b/trac/prefs/templates/prefs_advanced.html
@@ -26,7 +26,7 @@
       <label>Restore session:
         <input type="text" name="loadsid" size="30" value="" />
       </label>
-      <input type="submit" name="restore" value="Load" />
+      <input type="submit" name="restore" value="${_('Load')}" />
       <p class="hint">You may load a previously created session by entering the
       corresponding session key below. This lets you share settings between
       multiple computers and web browsers.</p>
