--- a/trac/search/templates/search.html
+++ b/trac/search/templates/search.html
@@ -45,7 +45,7 @@
         <p>
           <input type="text" id="q" name="q" size="40" value="${query}" />
           <input type="hidden" name="noquickjump" value="1" />
-          <input type="submit" value="Search" />
+          <input type="submit" value="${_('Search')}" />
         </p>
         <p class="filters">
           <py:for each="filter in filters">
