--- a/trac/templates/layout.html
+++ b/trac/templates/layout.html
@@ -89,7 +89,7 @@
       </div>
     </div>
 
-    <div id="footer"><hr/>
+    <div id="footer" xml:lang="en"><hr/>
       <a id="tracpowered" href="http://trac.edgewall.org/"><img
         src="${href.chrome('common/trac_logo_mini.png')}" height="30"
         width="107" alt="Trac Powered"/></a>
