--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -204,7 +204,7 @@
               <div py:if="ticket.description" class="searchable" xml:space="preserve">
                 ${wiki_to_html(context, ticket.description, escape_newlines=True)}
               </div>
-              <br py:if="not ticket.description" stlye="clear: both;" />
+              <br py:if="not ticket.description" style="clear: both" />
             </div>
         </div>
       </fieldset>
