--- a/trac/admin/templates/admin.html
+++ b/trac/admin/templates/admin.html
@@ -25,8 +25,7 @@
               <li py:for="panel in panels" py:with="panel = panel.panel;
                       pan_is_active = cat_is_active and panel.id == active_panel"
                   class="${pan_is_active and 'active' or None}">
-                <a py:strip="pan_is_active"
-                   href="${href.admin(category.id, panel.id)}">${panel.label}</a>
+                <a href="${href.admin(category.id, panel.id)}">${panel.label}</a>
               </li>
             </ul>
           </li>
